# CubeDash

./: CMakeLists.txt  README.md
dependencies/lib/: libsfml-graphics.2.6.1.dylib
header/: Game.h  Level.h  Player.h  constants.h
src/: Game.cpp  Level.cpp  Player.cpp  main.cpp
